force-app/main/default/objects/Contact/fields/Account_Giving_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Account_Giving_Last_12_Months__c</fullName>
    <description>Mirrors &quot;Giving Last 12 Months&quot; from the Account onto the Contact Record</description>
    <formula>Account.Giving_Last_12_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Giving Last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>