force-app/main/default/objects/Contact/fields/Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18__c</fullName>
    <description>18 Character Account ID</description>
    <formula>Account.SFID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (18)</label>
    <type>Text</type>
</CustomField>