force-app/main/default/objects/Contact/fields/ACT_Notes__c.field-meta.xml
<CustomField>
    <fullName>ACT_Notes__c</fullName>
    <label>ACT_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>