force-app/main/default/objects/Contact/fields/ACTID__c.field-meta.xml
<CustomField>
    <fullName>ACTID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id from ACT! data migration.</inlineHelpText>
    <label>ACTID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>