force-app/main/default/objects/Contact/fields/Address_Before_Merge__c.field-meta.xml
<CustomField>
    <fullName>Address_Before_Merge__c</fullName>
    <description>When duplicate Contacts were merged, if a duplicate Contact had more than one address, additional addresses were captured here to prevent data loss. Multiple addresses are separated by a comma.</description>
    <inlineHelpText>This field captured all addresses when duplicate Contacts were merged.</inlineHelpText>
    <label>Address Before Merge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>