force-app/main/default/objects/Contact/fields/All_Emails_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>All_Emails_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CAUTION:  Checking this box will prevent the Contact from receiving any email from FamilyLife.  The ONLY exception is an email manually sent for the purpose of one-to-one relationship by a staff member.</inlineHelpText>
    <label>Current Preferred Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>