force-app/main/default/objects/Contact/fields/Anniversary_Year__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Year__c</fullName>
    <inlineHelpText>Please enter the 4 digit year.</inlineHelpText>
    <label>Anniversary Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>