force-app/main/default/objects/Contact/fields/AOP_Account_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>AOP_Account_Create_Date__c</fullName>
    <label>AOP Account Create Date</label>
    <type>Date</type>
</CustomField>