force-app/main/default/objects/Contact/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>