force-app/main/default/objects/Contact/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <label>Birth Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>