force-app/main/default/objects/Contact/fields/CCM_Give__c.field-meta.xml
<CustomField>
    <fullName>CCM_Give__c</fullName>
    <label>CCM Give</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>