force-app/main/default/objects/Contact/fields/CCM_Lapsed_True__c.field-meta.xml
<CustomField>
    <fullName>CCM_Lapsed_True__c</fullName>
    <formula>IF(CCM_Lapsed__c =True, IMAGE( &quot;  /servlet/servlet.FileDownload?file=015i0000005h8as&quot;,&quot;&quot;,18,85),&quot;&quot;)</formula>
    <inlineHelpText>If this shows lapsed, contact has not had any transactions in the last 3 years.</inlineHelpText>
    <label>CCM Lapsed</label>
    <type>Text</type>
</CustomField>