force-app/main/default/objects/Contact/fields/CCM_With__c.field-meta.xml
<CustomField>
    <fullName>CCM_With__c</fullName>
    <label>CCM With</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>