force-app/main/default/objects/Contact/fields/Communication_Preference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference_Notes__c</fullName>
    <description>Global Dept Use:  Notes regarding the Global Contact&apos;s communication preferences.</description>
    <label>Communication Preference Notes</label>
    <type>TextArea</type>
</CustomField>