force-app/main/default/objects/Contact/fields/Contact_Event_Area__c.field-meta.xml
<CustomField>
    <fullName>Contact_Event_Area__c</fullName>
    <description>Mirrors Event Area Code from Account Level</description>
    <formula>Account.Event_Area_Code_LU__c</formula>
    <label>Contact Event Area</label>
    <type>Text</type>
</CustomField>