force-app/main/default/objects/Contact/fields/Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences__c</fullName>
    <formula>&quot;Method: &quot; &amp; IF(TEXT(Preferred_Method_of_Contact__c) = &quot;&quot;, &quot;None Chosen&quot;, TEXT(Preferred_Method_of_Contact__c)) 
&amp; BR()&amp; &quot;Phone: &quot; &amp; TEXT(Preferred_Phone_Type__c) 
&amp; BR()&amp; &quot;Email: &quot; &amp; TEXT(Preferred_Email__c)</formula>
    <label>Contact Preferences</label>
    <type>Text</type>
</CustomField>