force-app/main/default/objects/Contact/fields/Contact_Primary_Staff__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Staff__c</fullName>
    <formula>Account.Contact_Primary_Staff__c</formula>
    <inlineHelpText>RED LIGHT - Do not proceed without contacting Donor Rep
YELLOW LIGHT - Attempt to contact Donor Rep and give two business days for response then proceed</inlineHelpText>
    <label>Primary Staff Indicator</label>
    <type>Text</type>
</CustomField>