force-app/main/default/objects/Contact/fields/Contact_Primary_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Staff_Email__c</fullName>
    <formula>IF( Account.Primary_Relationship__c &lt;&gt; &quot;&quot;,  Account.Primary_Relationship__r.Email , &quot;&quot;)</formula>
    <label>Primary Staff Email</label>
    <type>Text</type>
</CustomField>