force-app/main/default/objects/Contact/fields/Contact_Primary_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Staff_Member__c</fullName>
    <formula>Account.Primary_Relationship__r.FirstName &amp;&quot; &quot;&amp; Account.Primary_Relationship__r.LastName</formula>
    <inlineHelpText>If there is a name listed in this field, please contact this person before proceeding with any contact.</inlineHelpText>
    <label>Primary Staff</label>
    <type>Text</type>
</CustomField>