force-app/main/default/objects/Contact/fields/Contact_Primary_Staff_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Staff_Phone__c</fullName>
    <formula>IF( Account.Primary_Relationship__c &lt;&gt; &quot;&quot;,  Account.Primary_Relationship__r.Phone , &quot;&quot;)</formula>
    <label>Primary Staff Phone</label>
    <type>Text</type>
</CustomField>