force-app/main/default/objects/Contact/fields/CRU_PID__c.field-meta.xml
<CustomField>
    <fullName>CRU_PID__c</fullName>
    <formula>Account.Cru_PID__c</formula>
    <label>Siebel Account</label>
    <type>Text</type>
</CustomField>