force-app/main/default/objects/Contact/fields/CV_Church__c.field-meta.xml
<CustomField>
    <fullName>CV_Church__c</fullName>
    <label>CV Church</label>
    <length>100</length>
    <type>Text</type>
</CustomField>