force-app/main/default/objects/Contact/fields/CV_Church_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Address_2__c</fullName>
    <label>CV Church Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>