force-app/main/default/objects/Contact/fields/CV_Church_Address__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Address__c</fullName>
    <label>CV Church Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>