force-app/main/default/objects/Contact/fields/CV_Church_Attendance__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Attendance__c</fullName>
    <label>CV Church Attendance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>