force-app/main/default/objects/Contact/fields/CV_Church_City__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_City__c</fullName>
    <label>CV Church City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>