force-app/main/default/objects/Contact/fields/CV_Church_Involvement__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Involvement__c</fullName>
    <label>CV Church Involvement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>