force-app/main/default/objects/Contact/fields/CV_Church_Phone__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Phone__c</fullName>
    <label>CV Church Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>