force-app/main/default/objects/Contact/fields/CV_Church_Position__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Position__c</fullName>
    <label>CV Church Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>