force-app/main/default/objects/Contact/fields/CV_Church_State_2__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_State_2__c</fullName>
    <label>CV Church State 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>