force-app/main/default/objects/Contact/fields/CV_Church_State__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_State__c</fullName>
    <label>CV Church State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>