force-app/main/default/objects/Contact/fields/CV_Church_Website__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Website__c</fullName>
    <label>CV Church Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>