force-app/main/default/objects/Contact/fields/CV_Church_Zip__c.field-meta.xml
<CustomField>
    <fullName>CV_Church_Zip__c</fullName>
    <label>CV Church Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>