force-app/main/default/objects/Contact/fields/CV_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>CV_Confirmation__c</fullName>
    <label>CV Confirmation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>