force-app/main/default/objects/Contact/fields/CV_Coupon__c.field-meta.xml
<CustomField>
    <fullName>CV_Coupon__c</fullName>
    <label>CV Coupon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>