force-app/main/default/objects/Contact/fields/CV_Cru_Donation_Src__c.field-meta.xml
<CustomField>
    <fullName>CV_Cru_Donation_Src__c</fullName>
    <label>CV Cru Donation Src</label>
    <length>255</length>
    <type>Text</type>
</CustomField>