force-app/main/default/objects/Contact/fields/CV_Discount__c.field-meta.xml
<CustomField>
    <fullName>CV_Discount__c</fullName>
    <label>CV Discount</label>
    <length>25</length>
    <type>Text</type>
</CustomField>