force-app/main/default/objects/Contact/fields/CV_GC_Product__c.field-meta.xml
<CustomField>
    <fullName>CV_GC_Product__c</fullName>
    <label>CV GC Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>