force-app/main/default/objects/Contact/fields/CV_GC_Valid__c.field-meta.xml
<CustomField>
    <fullName>CV_GC_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CV GC Valid</label>
    <type>Checkbox</type>
</CustomField>