force-app/main/default/objects/Contact/fields/CV_GC_Validate__c.field-meta.xml
<CustomField>
    <fullName>CV_GC_Validate__c</fullName>
    <label>CV GC Validate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>