force-app/main/default/objects/Contact/fields/CV_Gift_Card_Amount__c.field-meta.xml
<CustomField>
    <fullName>CV_Gift_Card_Amount__c</fullName>
    <label>CV Gift Card Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>