force-app/main/default/objects/Contact/fields/CV_Gift_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>CV_Gift_Card_Number__c</fullName>
    <label>CV Gift Card Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>