force-app/main/default/objects/Contact/fields/CV_Group__c.field-meta.xml
<CustomField>
    <fullName>CV_Group__c</fullName>
    <label>CV Group</label>
    <length>75</length>
    <type>Text</type>
</CustomField>