force-app/main/default/objects/Contact/fields/CV_Group_Validate__c.field-meta.xml
<CustomField>
    <fullName>CV_Group_Validate__c</fullName>
    <label>CV Group Validate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>