force-app/main/default/objects/Contact/fields/CV_ID__c.field-meta.xml
<CustomField>
    <fullName>CV_ID__c</fullName>
    <externalId>true</externalId>
    <label>CV ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>