force-app/main/default/objects/Contact/fields/CV_Pastor_Hear__c.field-meta.xml
<CustomField>
    <fullName>CV_Pastor_Hear__c</fullName>
    <label>CV Pastor Hear</label>
    <length>75</length>
    <type>Text</type>
</CustomField>