force-app/main/default/objects/Contact/fields/CV_Pastor_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>CV_Pastor_Scholarship__c</fullName>
    <label>CV Pastor Scholarship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>