force-app/main/default/objects/Contact/fields/CV_Source_Code_2__c.field-meta.xml
<CustomField>
    <fullName>CV_Source_Code_2__c</fullName>
    <label>CV Source Code 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>