force-app/main/default/objects/Contact/fields/CV_Title_1__c.field-meta.xml
<CustomField>
    <fullName>CV_Title_1__c</fullName>
    <label>CV Title 1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>