force-app/main/default/objects/Contact/fields/CV_Title_2__c.field-meta.xml
<CustomField>
    <fullName>CV_Title_2__c</fullName>
    <label>CV Title 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>