force-app/main/default/objects/Contact/fields/CV_Title_3__c.field-meta.xml
<CustomField>
    <fullName>CV_Title_3__c</fullName>
    <label>CV Title 3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>