force-app/main/default/objects/Contact/fields/CV_WTR_Attended__c.field-meta.xml
<CustomField>
    <fullName>CV_WTR_Attended__c</fullName>
    <label>CV WTR Attended</label>
    <length>10</length>
    <type>Text</type>
</CustomField>