force-app/main/default/objects/Contact/fields/Data_Source_del__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_del__c</fullName>
    <label>Data Source (Sys)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Five9</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>Dynamics</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>