force-app/main/default/objects/Contact/fields/Date_Entered_General_File_Lift_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_General_File_Lift_Program__c</fullName>
    <formula>Account.Date_Entered_General_File_Lift_Program__c</formula>
    <inlineHelpText>Reflected from Household Record</inlineHelpText>
    <label>Date Entered General File Lift Program</label>
    <type>Date</type>
</CustomField>