force-app/main/default/objects/Contact/fields/Date_Modified_Current_Preferred_Email_Op__c.field-meta.xml
<CustomField>
    <fullName>Date_Modified_Current_Preferred_Email_Op__c</fullName>
    <description>Field requested by Pete Offerman to capture the date the all emails opt out check box aka &quot;Current Preferred Email Opt Out&quot; was changed. This is to report that if check box is true then date to report on the dates where the email opt outs were changed to the true value</description>
    <label>Date Modified Current Preferred Email Op</label>
    <type>DateTime</type>
</CustomField>