force-app/main/default/objects/Contact/fields/Date_Modified_pref_ETH__c.field-meta.xml
<CustomField>
    <fullName>Date_Modified_pref_ETH__c</fullName>
    <description>Date and time preference was modified</description>
    <label>Date Modified pref_ETH</label>
    <type>DateTime</type>
</CustomField>