force-app/main/default/objects/Contact/fields/Date_Modified_pref_ISD__c.field-meta.xml
<CustomField>
    <fullName>Date_Modified_pref_ISD__c</fullName>
    <description>Date and time preference was modified</description>
    <label>Date Modified pref_ISD</label>
    <type>DateTime</type>
</CustomField>