force-app/main/default/objects/Contact/fields/Date_Modified_sub_ever_thine_home_blog__c.field-meta.xml
<CustomField>
    <fullName>Date_Modified_sub_ever_thine_home_blog__c</fullName>
    <description>Date and time subscription was modified</description>
    <label>Date Modified sub_ever_thine_home_blog</label>
    <type>DateTime</type>
</CustomField>